--- a/src/app/layout/balances/exchange-balance/exchange-balance.component.html
+++ b/src/app/layout/balances/exchange-balance/exchange-balance.component.html
@@ -52,7 +52,9 @@
                      style="width: 100%;"></div>
             </div>
             <div class="card-header">
-                <div>Summary of all exchange wallets</div>
+                <div class="d-flex flex-row mb-2">
+                    <h3>Summary of all exchange wallets</h3>
+                </div>
                 <ng-container *ngIf="totalExchangeWalletBalances != null">
                     <h5 class="badge bg-info text-light mr-1 p-1">
                         Total:
